Fix some broken styles

--- a/src/include/require/styles/framework.css
+++ b/src/include/require/styles/framework.css
@@ -417,7 +417,7 @@ a {
 */
 html {
   height: 100%;
-  background-color: var(--color-text-primary);
+  background-color: var(--color-text);
   color: var(--color-text);
 }
 html body {
@@ -539,7 +539,7 @@ h6,
 .dg-fakeHeading {
   text-decoration: none;
   font-weight: bold;
-  color: var(--color-text-primary);
+  color: var(--color-text);
   padding-bottom: 5px;
   line-height: 1.285714em;
   margin: 0 0 1rem;
@@ -973,7 +973,7 @@ img {
   display: flex;
   align-items: center;
   position: fixed;
-  color: var(--color-text-primary);
+  color: var(--color-text);
 }
 @media print {
   .topbar {
@@ -1006,7 +1006,7 @@ img {
 }
 .topbar #headerLeftText a {
   text-decoration: none;
-  color: var(--color-text-primary) !important;
+  color: var(--color-text) !important;
 }
 .topbar #headerLeftText #headerSponsor {
   display: flex;
