--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -4,7 +4,7 @@
 
 html {
   height: 100%;
-  background-color: var(--color-text-primary);
+  background-color: var(--color-text);
   color: var(--color-text);
 
   body {
